--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
   <canvas id="cameraCanvas"></canvas>
   <video id="video" autoplay playsinline muted style="display:none;"></video>
 
-  <div id="kisscamText">KISS CAM</div>
+  <div id="recHeader">
+  <div class="rec-dot"></div>
+  <div class="rec-text">Kiss Cam</div>
+  </div>
 
   <div id="heartWrapper" aria-hidden="true">
     <svg id="heartOutline" viewBox="0 0 100 90" preserveAspectRatio="xMidYMid meet">
