Add mask overlay div to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <div id="app">
+<div id="maskOverlay"></div>
 
   <canvas id="cameraCanvas"></canvas>
   <video id="video" autoplay playsinline muted style="display:none;"></video>
