--- a/index.html
+++ b/index.html
@@ -47,5 +47,20 @@
 </div>
 
 <script src="script.js"></script>
+  <svg width="0" height="0">
+  <defs>
+    <mask id="heartMask" x="0" y="0" width="100%" height="100%">
+      <!-- Everything is hidden -->
+      <rect x="0" y="0" width="100%" height="100%" fill="black" />
+      <!-- Heart cutout (white = visible camera) -->
+      <path id="heartCutout"
+        fill="white"
+        d="M512 240C470 170 370 150 310 230C250 150 150 170 108 240C40 350 200 500 310 580C420 500 580 350 512 240Z"
+        transform="scale(1.6) translate(-140 -120)"
+      />
+    </mask>
+  </defs>
+</svg>
+
 </body>
 </html>
