--- a/index.html
+++ b/index.html
@@ -1,67 +1,44 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover"/>
-<meta name="apple-mobile-web-app-orientation" content="landscape">
-<title>Kiss Cam — Wedding v10 (Landscape)</title>
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 <div id="app">
-<div id="maskOverlay"></div>
 
-  <canvas id="cameraCanvas"></canvas>
-  <video id="video" autoplay playsinline muted style="display:none;"></video>
+    <!-- REC + Kiss Cam -->
+    <div id="recHeader">
+        <span class="recDot">●</span>
+        <span class="recText">Kiss Cam</span>
+    </div>
 
-  <div id="recHeader">
-  <div class="rec-dot"></div>
-  <div class="rec-text">Kiss Cam</div>
-  </div>
+    <!-- Message -->
+    <div id="message">Who shall be the lucky couple?</div>
 
-  <div id="heartWrapper" aria-hidden="true">
-    <svg id="heartOutline" viewBox="0 0 100 90" preserveAspectRatio="xMidYMid meet">
-      <path d="M50 82 L45 78 C20 58 5 40 5 25 C5 12 17 5 30 12 C38 17 43 28 50 36 C57 28 62 17 70 12 C83 5 95 12 95 25 C95 40 80 58 55 78 L50 82 Z"
-        fill="none" stroke="#fff" stroke-width="4"/>
-    </svg>
-  </div>
+    <!-- Camera -->
+    <canvas id="cameraCanvas"></canvas>
 
-  <div id="message"></div>
+    <!-- Heart outline -->
+    <div id="heartWrapper">
+        <img id="heartOutline" src="heart.svg">
+    </div>
 
-  <div id="controls">
-    <button id="searchBtn" class="left">Searching</button>
-    <button id="kissBtn" class="right">Kiss!</button>
-  </div>
+    <!-- Red masked overlay -->
+    <canvas id="overlayCanvas"></canvas>
 
-  <div id="particles"></div>
+    <!-- Floating hearts -->
+    <div id="particles"></div>
 
-  <!-- small hidden control to flip rotation if needed -->
-  <div id="devControls">
-    <label>Rotate: </label>
-    <select id="rotationSelect" aria-label="rotation">
-      <option value="-90">R2/T2 (-90°)</option>
-      <option value="90">R2/T1 (90°)</option>
-      <option value="0">No rotate (0°)</option>
-    </select>
-  </div>
+    <!-- Buttons -->
+    <div id="controls">
+        <button id="searchBtn">Searching</button>
+        <button id="kissBtn" class="right">Kiss!</button>
+    </div>
+
 </div>
 
 <script src="script.js"></script>
-  <svg width="0" height="0">
-  <defs>
-    <mask id="heartMask" x="0" y="0" width="100%" height="100%">
-      <!-- Everything is hidden -->
-      <rect x="0" y="0" width="100%" height="100%" fill="black" />
-      <!-- Heart cutout (white = visible camera) -->
-      <path id="heartCutout"
-        fill="white"
-        d="M512 240C470 170 370 150 310 230C250 150 150 170 108 240C40 350 200 500 310 580C420 500 580 350 512 240Z"
-        transform="scale(1.6) translate(-140 -120)"
-      />
-    </mask>
-  </defs>
-</svg>
-<canvas id="overlayCanvas"></canvas>
-
 </body>
 </html>
